# CodeWarPython2025

./: .coverage  .env  .gitignore  Dockerfile  README.md  alembic.ini  database.db  memory  pyproject.toml
.devcontainer/: devcontainer.json
migrations/: env.py
migrations/versions/: 72e74834579e_create_users_table.py  f3776c57222f_outra_alteracao.py
src/code_war/: app.py  dashboard.py  database.py  etl.py  models.py  schemas.py  settings.py
tests/: conftest.py  test_app.py  test_db.py
